--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-<p>Betsy Twombly</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>A History of Vehicle Ownership
+            by Betsy Twombly
+        </title>
+    </head>
+     <body>
+         <h1>My First Car - Orange 1972 VW Beetle</h1>
+                <p>Great car. Reliable - so few goodies that there 
+                    was very little that could go wrong. No AC; manual 
+                    transmission; manual widows, locks,etc. Great fun 
+                    to drive.
+        <h1>VW Rabbit*</h1>
+                <p>Just as bare-bones as the Beetle, but far from reliable.
+                    This car was noisy and uncomfortable and in constant 
+                    need of expensive repairs.
+        <h1>Datson/Nissan Maxima Wagon</h1>
+                <p>My boss didn't think much  of my VW Rabbit so
+                    he offered me a $200 per month car allowance if 
+                    I would buy something else. I bought a used Maxima
+                    Wagon that was a HUGE step up for me. It was super 
+                    luxurious compared to what I had driven. Cushy fabric
+                    seats; power windows and doors; nice stereo; great
+                    ride; and very reliable. I don't remember ever taking 
+                    it to a mechanic.
+        <h1>The First of Three Chrysler Minivans</h1>
+                <p>My husband talked me into buying this first minivan. 
+                    Shortly fterward, I regretted allowing him to influence
+                    me, but it wasn't long before I was appreciating all it had 
+                    to offer. Although I've owned other vehicles over the last 
+                    25 years, I have never been without a minivan. They've 
+                    been great for chauffering kids and teenagers and their 
+                    friends; hauling building materials for projects; picking up
+                    large purchases; vacations; and hauling merchandise from my
+                    various businesses to selling venues. I can't imagine the 
+                    level of inconvenience of not owning a minivan.
+                    </p>
+        <h1>VW New Beetle TDI</h1>
+                <p>An acquaintance suggested that this was my mid-life crisis 
+                    vehicle. Whatever. It was fun, cute, and had the little 
+                    luxuries that the original beatles lacked. And the diesel 
+                    engine meant that I got 40+ mpg...plus diesel was cheaper 
+                    than gas at that time. Unfortunately, it didn't have the 
+                    reliability of the original. When my daughter got her driver's 
+                    license, this became the car she drove.
+                </p>
+        <h1>Four Wheel Dive Ford Ranger</h1>
+                <p>This vehicle was purchased for my daughter's use but I drove 
+                    it for a few months first. It had massive tires and I had to 
+                    climb to get in it. We had some fun with this vehicle, including one 
+                    of my childrens' and my favorite memories; I woke them at 3am on 
+                    the night of the big ice storm and we drove all over town looking
+                    at the storm damage.
+                </p>
+        <h1>Brand-New 2008 Hyundai Elantra Limited with Leather Seats</h1>
+                <p>This was my first-ever brand-new car. Although it was small
+                    and fuel-efficient, it had nearly all the bells and whistles
+                    at a great price. My daughter still drives this car and loves it.
+                    She has never had to have it serviced other than  maintenance.</p>
+                </p>
+        <h1>White Hail-Damaged Acura TL</h1>
+                </p>This car was purchased as a vehicle for my daughter to use
+                but I drove it for awhile first and fell in love with it. Instead, I let 
+                her have my much newer Elantra. Even though the Acurs was ten years old, 
+                I drove it for four years without having to do anything other than change
+                the oil. Plus, after four years, I sold it for more than I paid for it. 
+                It was a wonderful car to drive and I really didn't care about the
+                extensive hail damage. In fact, we had two more bad hail storms after I 
+                bought it. No worries,
+                </p>
+   </body>
+     <footer>
+* Although model years aren't all etched in my memory, I could probably come up with them 
+if I thought about it for a while and di some research.
+
+     </footer>
+</html>
