--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
         </title>
     </head>
      <body>
+         <main>
          <h1>My First Car - Orange 1972 VW Beetle</h1>
                 <p>Great car. Reliable - so few goodies that there 
                     was very little that could go wrong. No AC; manual 
                     transmission; manual widows, locks,etc. Great fun 
                     to drive.
+                </p>
+                <img src=https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiamvSzwK_WAhVKwiYKHTb8DcgQjRwIBw&url=http%3A%2F%2Fpaintref.com%2Fcgi-bin%2Fcolorcodedisplay.cgi%3Ftype%3Dsample%26ditzler%3D2477%26syear%3D1972%26smanuf%3DVolkswagen%26smodel%3DBeetle%26sname%3DBrilliant%2520Orange&psig=AFQjCNEAV0aMSX7baI8pZ4tgrQvKTnPb1A&ust=1505850396742527
+                "1972 Orange Beetle"/>
         <h1>VW Rabbit*</h1>
                 <p>Just as bare-bones as the Beetle, but far from reliable.
                     This car was noisy and uncomfortable and in constant 
@@ -44,6 +48,8 @@
                     than gas at that time. Unfortunately, it didn't have the 
                     reliability of the original. When my daughter got her driver's 
                     license, this became the car she drove.
+                <article href=https://www.consumeraffairs.com/automotive/vw_beetle.html>"VW Beetle Reliability"
+                </article>
                 </p>
         <h1>Four Wheel Dive Ford Ranger</h1>
                 <p>This vehicle was purchased for my daughter's use but I drove 
@@ -68,11 +74,11 @@
                 It was a wonderful car to drive and I really didn't care about the
                 extensive hail damage. In fact, we had two more bad hail storms after I 
                 bought it. No worries,
-                </p>
+               </p>
+         </main>
    </body>
      <footer>
 * Although model years aren't all etched in my memory, I could probably come up with them 
-if I thought about it for a while and di some research.
-
+if I thought about it for a while and did some research.
      </footer>
 </html>
