changes and additions to text and html

--- a/index.html
+++ b/index.html
@@ -4,81 +4,179 @@
         <title>A History of Vehicle Ownership
             by Betsy Twombly
         </title>
+        <link rel="stylesheet" href="styles.css">
     </head>
      <body>
          <main>
-         <h1>My First Car - Orange 1972 VW Beetle</h1>
-                <p>Great car. Reliable - so few goodies that there 
-                    was very little that could go wrong. No AC; manual 
-                    transmission; manual widows, locks,etc. Great fun 
-                    to drive.
-                </p>
-                <img src=https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiamvSzwK_WAhVKwiYKHTb8DcgQjRwIBw&url=http%3A%2F%2Fpaintref.com%2Fcgi-bin%2Fcolorcodedisplay.cgi%3Ftype%3Dsample%26ditzler%3D2477%26syear%3D1972%26smanuf%3DVolkswagen%26smodel%3DBeetle%26sname%3DBrilliant%2520Orange&psig=AFQjCNEAV0aMSX7baI8pZ4tgrQvKTnPb1A&ust=1505850396742527
-                "1972 Orange Beetle"/>
-        <h1>VW Rabbit*</h1>
-                <p>Just as bare-bones as the Beetle, but far from reliable.
+             <article>
+                <header>
+                    <h1>A Biographical History of Vehicle Ownership</h1>
+                    <h3 id="myname">by Betsy Twombly</h3>
+                </header>
+                <div class="left">
+                <img src=C:\Users\Betsy\Desktop\lc101\html-me-something\images.jpg\1972bugresize.jpg alt="1974 Orange VW Beetle"/>
+                </div>
+                <br/>
+                <h2>My First Car - 1974 Orange VW Bug</h2>  
+                    <p>Great car and very reliable. As my father used to say, 
+                    "the less it has on it, the less there is to break." So, 
+                    not much here to break. No AC; no real heater;
+                    manual transmission; manual widows, locks, etc. But such
+                    great fun to drive. I should also mention one of my favorite
+                    things about the old bugs...the front window vents. I still miss 
+                    those vents.</p>
+                <div class="right">
+                <br/>
+                <br/>
+                <img src="C:\Users\Betsy\Desktop\lc101\html-me-something\images.jpg\vwrabbitresize.jpg" alt="VW Rabbit"/>
+                </div>
+                <br/>
+                <br/>
+                <br/>
+                <h2>Volkswagen Rabbit*</h2>
+                    <p>Just as bare-bones as the Beetle, but far from reliable. And so ugly!
                     This car was noisy and uncomfortable and in constant 
-                    need of expensive repairs.
-        <h1>Datson/Nissan Maxima Wagon</h1>
-                <p>My boss didn't think much  of my VW Rabbit so
+                    need of expensive repairs. It did still have the window
+                    vents, which is helpful when you have no air conditioning,
+                    but they didn't function quite as nicely as the ones on the 
+                    bug.</p>
+                <div class="left">
+                <br/>
+                <br/>
+                <img src="C:\Users\Betsy\Desktop\lc101\html-me-something\images.jpg\maximaresize.jpg" alt="Datsun-Nissan Maxima Wagon"/>
+                </div>
+                <br/>
+                <br/>
+                <br/>
+                <h2>1984 Datsun/Nissan Maxima Wagon</h2>
+                    <p>My boss at the time didn't think much of my VW Rabbit, so
                     he offered me a $200 per month car allowance if 
                     I would buy something else. I bought a used Maxima
-                    Wagon that was a HUGE step up for me. It was super 
-                    luxurious compared to what I had driven. Cushy fabric
+                    Wagon which was a HUGE step up for me. It was super 
+                    luxurious compared to what I had driven in the past. Cushy fabric
                     seats; power windows and doors; nice stereo; great
-                    ride; and very reliable. I don't remember ever taking 
-                    it to a mechanic.
-        <h1>The First of Three Chrysler Minivans</h1>
-                <p>My husband talked me into buying this first minivan. 
-                    Shortly fterward, I regretted allowing him to influence
-                    me, but it wasn't long before I was appreciating all it had 
-                    to offer. Although I've owned other vehicles over the last 
+                    ride; and very reliable. The boss didn't like it. Oh well.
+                    1984 was the transition year for the Datsun/Nissan name change.
+                    This car, like all cars manufactured in 1984, carried both the 
+                    Datsun and Nissan labels.</p>
+                <div class="right">
+                <br/>
+                <img src="C:\Users\Betsy\Desktop\lc101\html-me-something\images.jpg\grcaravanwoodyresize.jpg" alt="Chrysler Grand Caravan Wood"/>
+                </div>
+                <br/>
+                <br/>
+                <h2>Chrysler Grand Caravan Woody</h2>
+                    <p>The first of three Chrysler minivans  I've owned, 
+                    my husband talked me into buying this one. 
+                    Immediately after I bought this I came down with a bad case of buyer's
+                    remorse, but it wasn't long before I was appreciating all that a minivan had 
+                    to offer. Although I've owned and driven other vehicles over the last 
                     25 years, I have never been without a minivan. They've 
-                    been great for chauffering kids and teenagers and their 
-                    friends; hauling building materials for projects; picking up
-                    large purchases; vacations; and hauling merchandise from my
-                    various businesses to selling venues. I can't imagine the 
-                    level of inconvenience of not owning a minivan.
-                    </p>
-        <h1>VW New Beetle TDI</h1>
-                <p>An acquaintance suggested that this was my mid-life crisis 
+                    been great for vacations; chauffering kids and teenagers and their 
+                    friends; hauling equipment and building materials for projects; picking up
+                    large purchases; and hauling merchandise from my
+                    various businesses to various selling venues. I can't imagine the 
+                    inconvenience of not owning a minivan.</p>
+                </div>
+                <div class="left">
+                <br/>
+                <br/>
+                <img src="C:\Users\Betsy\Desktop\lc101\html-me-something\images.jpg\grcaravantealresize.jpg" alt="1997 Teal Chrysler Grand Caravan"/>
+                </div>
+                <br/>
+                <br/>
+                <br/>
+                <h2>1997 Teal Chrysler Grand Caravan</h2>
+                    <p>My second minivan was only one year old when I purchased it, so it was
+                    as close to a new car as I had ever had. I owned this van for about 16 years 
+                    and put about 130,000 miles on it. It served my family and me well, and I have 
+                    fond memories of my children associated with it. In it's later years it was an 
+                    extra vehicle, coming in handy when needed.</p>
+                <div class="right">
+                <br/>
+                <br/>
+                <img src="C:\Users\Betsy\Desktop\lc101\html-me-something\images.jpg\newbeetlegreenresize.jpg" alt="2001 Green New Beetle"/>
+                </div>
+                <br/>
+                <br/>
+                <br/>
+                <h2>2001 VW New Beetle TDI</h2>
+                    <p>An acquaintance suggested that this was my mid-life crisis 
                     vehicle. Whatever. It was fun, cute, and had the little 
                     luxuries that the original beatles lacked. And the diesel 
                     engine meant that I got 40+ mpg...plus diesel was cheaper 
                     than gas at that time. Unfortunately, it didn't have the 
                     reliability of the original. When my daughter got her driver's 
-                    license, this became the car she drove.
-                <article href=https://www.consumeraffairs.com/automotive/vw_beetle.html>"VW Beetle Reliability"
-                </article>
-                </p>
-        <h1>Four Wheel Dive Ford Ranger</h1>
-                <p>This vehicle was purchased for my daughter's use but I drove 
+                    license, this became the car she drove.</p>
+                <div class="left">
+                <br/>
+                <br/>
+                <img src="C:\Users\Betsy\Desktop\lc101\html-me-something\images.jpg\fordrangerresize.jpg" alt="Ford Ranger"/>
+                </div>
+                <br/>
+                <br/>
+                <br/>
+                <h2>Four Wheel Dive Ford Ranger</h2>
+                    <p>This vehicle was purchased for my daughter's use but I drove 
                     it for a few months first. It had massive tires and I had to 
                     climb to get in it. We had some fun with this vehicle, including one 
-                    of my childrens' and my favorite memories; I woke them at 3am on 
+                    of my childrens' and my favorite memories; I woke them at 3:00&#160;AM on 
                     the night of the big ice storm and we drove all over town looking
-                    at the storm damage.
-                </p>
-        <h1>Brand-New 2008 Hyundai Elantra Limited with Leather Seats</h1>
-                <p>This was my first-ever brand-new car. Although it was small
-                    and fuel-efficient, it had nearly all the bells and whistles
-                    at a great price. My daughter still drives this car and loves it.
-                    She has never had to have it serviced other than  maintenance.</p>
-                </p>
-        <h1>White Hail-Damaged Acura TL</h1>
-                </p>This car was purchased as a vehicle for my daughter to use
-                but I drove it for awhile first and fell in love with it. Instead, I let 
-                her have my much newer Elantra. Even though the Acurs was ten years old, 
-                I drove it for four years without having to do anything other than change
-                the oil. Plus, after four years, I sold it for more than I paid for it. 
-                It was a wonderful car to drive and I really didn't care about the
-                extensive hail damage. In fact, we had two more bad hail storms after I 
-                bought it. No worries,
-               </p>
+                    at the storm damage. Other than a few emergency vehicles, we were the 
+                    only people on the road. With the kids bundled up on top of their 
+                    pajamas, the eery quiet everywhere we went, and the lights glowing 
+                    through the coat of ice covering everything, it was absolutely magical.</p>
+                <div class="right">
+                <br/>
+                <img src="C:\Users\Betsy\Desktop\lc101\html-me-something\images.jpg\2008hyundaielantraresize.jpg" alt-"2008 Black Hyundai Elantra"/>
+                </div>
+                <br/>
+                <br/>
+                <h2>Brand-New 2008 Hyundai Elantra Limited</h2>
+                    <p>This was my first-ever brand-new car. Although it was small
+                    and fuel-efficient (the price of gas at that time was nearly $4.00 per 
+                    gallon), it had nearly all the bells and whistles at a great price. 
+                    My daughter still drives this car and has been very happy with it.
+                    She has never had to have it serviced other than scheduled maintenance.</p>
+                <div class="left">
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <img src="C:\Users\Betsy\Desktop\lc101\html-me-something\images.jpg\acuratlresize.jpg" alt="2002 White Acura TL"/>
+                </div>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <h2>2002 White Hail-Damaged Acura TL</h2>
+                    <p>This is another car that was purchased as a vehicle for my daughter to use,
+                    but of course I had to drive it for awhile first. I liked it so much I 
+                    just couldn't give it up. Instead, I let her have my much newer Elantra. 
+                    Even though the Acura was 9 years old when I got it, 
+                    I drove it for four more years without having to do anything other than change
+                    the oil. Plus, after four years, my son sold it for me for more than I paid for it. 
+                    It was a wonderful car to drive and I really didn't care about the
+                    extensive hail damage. In fact, we had two more bad hail storms after I 
+                    bought it. No worries.</p>
+                <div class="right">
+                <br/>
+                <img src="C:\Users\Betsy\Desktop\lc101\html-me-something\images.jpg\towncountrysilverresize.jpg" alt="2005 Silver Chrysler Town and Country"/>
+                </div>
+                <br/>
+                <br/>
+                <h2>2005 Silver Chrysler Town and Country</h2>
+                    <p>My third minivan, and nicest, and my current vehicle. Heated leather seats
+                    are an option that has become important to me in a car. In order to get the 
+                    leather seats you generally have to get a top-of-the-line model, which is okay
+                    with me. But some of the extras are wasted on me. I nearly lost this vehicle
+                    very recently. Someone broke in and attempted to steal it while it was 
+                    parked on Bayard next to Launchcode.</p>
+             </article>
          </main>
    </body>
-     <footer>
-* Although model years aren't all etched in my memory, I could probably come up with them 
-if I thought about it for a while and did some research.
-     </footer>
+   <footer>
+        <p>* My memory is not clear on a few model years. On those vehicles I chose to leave the year off rather than guess incorrectly.</p>
+    </footer>
 </html>
